fixed menu and blog on tablet screens

--- a/styles.css
+++ b/styles.css
@@ -64,6 +64,7 @@ body {
   display: flex;
   flex-direction: row;
   margin-left: 30px;
+  height: 30px;
 }
 
 #menu li {
@@ -957,7 +958,7 @@ body {
 /* Device = Tablets, iPad Pro (portrait and landscape) */
 
 @media only screen 
-  and (min-width: 1024px) 
+  and (max-width: 724px) 
   and (max-height: 1366px) 
   and (-webkit-min-device-pixel-ratio: 1.5) {
 html, body {
